@startuml

package Entities {
    class Student {
        - String email
        - String name
        - String phone
        + getEmail()
        + void setEmail(String email)
        + String getName()
        + void setName(String name)
        + String getPhone()
        + void setPhone(String phone)
    }

    class Item {
        - String item_name
        - String description
        + String getItemName()
        + void setItem_name(String item_name)
        + String getDescription()
        + void setDescription(String description)
    }

    class Booking {
        - LocalDate booking_date
        - int days
        - String comment
        - String booking_status
        + LocalDate getBookingDate()
        + void setBooking_date(LocalDate booking_date)
        + int getDays()
        + void setDays(int days)
        + String getComment()
        + void setComment(String comment)
        + String getBookingStatus()
        + void setBookingStatus(String bookingStatus)
    }

    class Room {
        - String room_number
        - String description
        + String getRoomNumber()
        + String setRoomNumber(String roomNumber)
        + String getDescription()
        + String setDescription(String description)
    }
}

package "Controllers" {
    class StudentController {
        + getAllStudents() List<Student>
        + void addStudent(student Student)
    }

    class ItemController {
        + getAllItems() List<Item>
        + getItemDetails(String itemName)
    }

    class BookingController {
        + getAllBookings() List<Booking>
        + void createBooking(booking Booking)
        + void updateBookingStatus(int bookingId,String status)
    }

    class AdminController {
        + void getDashboard()
    }
}

package Mappers {
    class StudentMapper {
        + getAllStudents() : List<Student>
        + void insertStudent(student Student)
    }

    class ItemMapper {
        + getAllItems() : List<Item>
        + getItemDetails(String itemName )
    }

    class BookingMapper {
        + getAllBookings() List<Booking>
        + void insertBooking(Booking booking)
        + void updateBookingStatus(int bookingId,String status)
    }
}


Student  --o  Booking
Booking --* Item
Item --o Room
StudentController --> StudentMapper
ItemController --> ItemMapper
BookingController --> BookingMapper

AdminController --> StudentMapper
AdminController --> ItemMapper
AdminController --> BookingMapper

@enduml
